--- a/project0/styles.css
+++ b/project0/styles.css
@@ -4,22 +4,24 @@ body {
 }
 #logo {
     text-align: center;
-    margin-top: 80px;
+    margin-top: 10%;
     margin-bottom: 20px;
     
 }   
 #nav {
     text-align: right;
+    margin-top: 20px;
     margin-bottom: 30px;
-    border-bottom: thin solid azure;
+    border-bottom: medium solid azure;
     padding-bottom: 10px;
-    opacity: 0.75;
+    opacity: 0.87;
 }
 #nav > a {
     margin-bottom: 45px;
     font-weight: 600;
     font-size: larger;
-    margin-right: 3%;
+    margin-right: 1%;
+    font-size:x-large;
 }
 #search {
     text-align: center;
@@ -28,18 +30,48 @@ body {
 input[name="q"] {
     margin-top: 10px;
     width: 40%;
-    padding: 8px 8px;
+    padding: 14px 8px;
     border-radius: 20px;
+    border: medium solid #aaa;
     box-sizing: border-box;
-    background-color:#212121
+    background-color:#212121;
+    color:#FFFFFF;
+    font-size: large;
+    background: transparent url("./images/search.svg") no-repeat 13px;
+    text-indent: 40px;
 }
 #submits {
     margin-top: 20px;
 }
 
 input[type="submit"]{
-    width: 12%;
+    width: 8%;
     height: 10%;
     font-size: medium;
     padding: 10px 10px;
+    background-color: #3d3d3d;
+    color:#FFFFFF;
+}
+input[type="search"]::-webkit-search-cancel-button {
+    -webkit-appearance: none;
+    height: 26px;
+    width: 26px;
+    margin-left: .4em;
+    background-image: url("./images/clear.svg");
+    cursor: pointer;
+}
+
+#nav > a {
+    color:#FFFFFF;
+    text-decoration: none;
+}
+
+#nav > a:hover {
+    color:#bbb;
+    text-decoration: none;
+}
+input[type="submit"]:hover{
+    background-color: #2d2d2d;
+    color:#FFFFFF;
+    border: thin solid #2d2d2d ;
 }
