--- a/week2/first_one/tasks/templates/tasks/add.html
+++ b/week2/first_one/tasks/templates/tasks/add.html
@@ -6,7 +6,7 @@
         <form action="{% url 'tasks:add' %}" method="post">
             <!-- CSRF token = for safety. It's already built in Django-->
             {% csrf_token %}
-            <input type="text" name="task">
+            {{ form }}
             <input type="submit">
         </form>
     </ul>
