--- a/project1/commerce/auctions/templates/auctions/index.html
+++ b/project1/commerce/auctions/templates/auctions/index.html
@@ -1,6 +1,12 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
+
+{% if messages %}
+    {% for message in messages %}
+        <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}" role="alert">{{ message }}</div>
+    {% endfor %}
+{% endif %}
     <h2>Active Listings</h2>
 
     TODO
