--- a/project1/commerce/auctions/templates/auctions/login.html
+++ b/project1/commerce/auctions/templates/auctions/login.html
@@ -2,6 +2,11 @@
 
 {% block body %}
 
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}" role="alert">{{ message }}</div>
+        {% endfor %}
+    {% endif %}
     <h2>Login</h2>
 
     {% if message %}
