--- a/project1/commerce/auctions/templates/auctions/create_listing.html
+++ b/project1/commerce/auctions/templates/auctions/create_listing.html
@@ -27,7 +27,7 @@
                 {% endfor %}
             </select>              
         </div>
-        <label for="price">Price</label>
+        <label for="price">Starting Price</label>
         <div class="input-group mb-3 w-25">
             <div class="input-group-prepend">
               <span class="input-group-text">$</span>
