--- a/project1/commerce/auctions/templates/auctions/categories.html
+++ b/project1/commerce/auctions/templates/auctions/categories.html
@@ -1,5 +1,8 @@
 {% extends "auctions/layout.html" %}
 
+{% block title %}
+    Categories
+{% endblock %}
 {% block body %}
     <form action="" method="get">
     <div class="btn-group btn-group-lg" role="group" aria-label="Categories">
