--- a/project1/commerce/auctions/templates/auctions/create_listing.html
+++ b/project1/commerce/auctions/templates/auctions/create_listing.html
@@ -1,5 +1,8 @@
 {% extends "auctions/layout.html" %}
 
+{% block title %}
+    Create a Listing
+{% endblock %}
 {% block body %}
     <h2>Create listing</h2>
 
