--- a/project1/commerce/auctions/templates/auctions/watchlist.html
+++ b/project1/commerce/auctions/templates/auctions/watchlist.html
@@ -1,5 +1,8 @@
 {% extends "auctions/layout.html" %}
 
+{% block title %}
+    Watchlist
+{% endblock %}
 {% block body %}
     <h2>Items in your watchlist:</h2>
     <div class="list-group w-25" id="watchlist">
