--- a/project1/commerce/auctions/templates/auctions/listing.html
+++ b/project1/commerce/auctions/templates/auctions/listing.html
@@ -19,7 +19,7 @@
         {% endfor %}
     {% endif %}
     {% if item %}
-    <div class="container-fluid border-bottom">
+    <div class="container-fluid border-bottom pb-4">
         <div class="row">
             <div class="col-md-auto">
                 <img src="{{item.image}}" class="img-fluid" alt="W3Schools.com" onerror="this.onerror=null;this.src='{{img_url}}';" style="width:240px;height:auto;">
@@ -54,26 +54,33 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid">
+    <div class="container-fluid mt-2">
         <div class="row">
-            <div class="container-fluid">
-            <p>Current bid(s)</p>
-            </div>
+                <div class="col">
+                    <p>Total Current bid(s) <strong>{{bid_count}}</strong> </p>
+                    <p>Current Max Bid is <strong>{{max_bid}}</strong></p>
+                </div>
+        </div>
     {% if request.user.is_authenticated %}
-    <div class="container-fluid">
-    <label for="bid">Bid for item</label>   
-    </div>
-
+        <div class="row">
+            <div class="col">
+            <p>Your Max Bid is <strong>{{user_bid}}</strong></p>
+            <label for="bid">Bid for item</label>   
+            <form action="" method="post">
+                {% csrf_token %}
             <div class="input-group mb-3 w-25">
                 <div class="input-group-prepend">
                     <span class="input-group-text">$</span>
                 </div>
-            <input type="number" class="form-control" id="bid" name="bid" placeholder="Bid">
-            <div class="input-group-append">
-                <input type="submit" class="btn btn-primary">
+                <input type="number" step="0.01" min="0" class="form-control" id="bid" name="bid" placeholder="Bid">
+                <div class="input-group-append">
+                    <input type="submit" class="btn btn-primary">
+                </div>
             </div>
-    {% endif %}
+            </form>
+            </div>
         </div>
+    {% endif %}
     </div>
     <h2>Comments</h2>
     {% if comments %}
