--- a/project1/commerce/auctions/templates/auctions/index.html
+++ b/project1/commerce/auctions/templates/auctions/index.html
@@ -15,13 +15,13 @@
             <img src="{{item.image}}    " class="img-fluid" alt="W3Schools.com" onerror="this.onerror=null;this.src='{{img_url}}';" style="width:240px;height:auto;">
             </div>
             <div class="col-8 align-self-center">
-            <h3>Name: {{item.title}} </h2>
-            <h3>Category: {{item.category}}</h2>
+            <h2><a href="{% url 'listing' item.id %}">{{item.title}} </a></h2>
+            <h4>Category: {{item.category}}</h4>
             {% if item.description %}
-                <h3>Description: {{item.description}}</h2>
+                <h4>Description: {{item.description}}</h4>
             {% endif %}
-            <h3>Price: {{item.price}} </h2>
-            <h3>Createad at: {{item.created_time}}</h2>
+            <h4>Price: {{item.price}} </h4>
+            <h4><small class="text-muted">Createad at: {{item.created_time}}</small></h4>
             </div>
         </div>
     </div> 
