--- a/project4/network/static/network/styles.css
+++ b/project4/network/static/network/styles.css
@@ -8,6 +8,9 @@ body {
     min-height: 100vh;
 }
 
+button {
+    font-family: inherit;
+}
 main {
     max-width: 800px;
     margin: 0 auto;
@@ -41,4 +44,20 @@ main h2 {
 
 footer {
     margin-top: 1em;
+}
+
+#follow-button {
+    margin-left: 1em;
+    padding: 0.5em 1em;
+    background-color: #ffffff;
+    border: 1px solid;
+    border-color: #3399FF;
+    border-radius: 3px;
+}
+
+#follow-button:hover {
+    box-shadow: 0 0 11px rgba(33,33,33,.2); 
+}
+#profile-name {
+    display:inline-block;
 }
