--- a/project4/network/static/network/styles.css
+++ b/project4/network/static/network/styles.css
@@ -16,9 +16,10 @@ main {
     margin: 0 auto;
 }
 
-main h2 {
+main h1,h2 {
     margin-top: 0.5em;
 }
+
 .create-post {
     border: 1px solid gray;
     border-radius: 15px;
