--- a/project4/network/templates/network/layout.html
+++ b/project4/network/templates/network/layout.html
@@ -30,7 +30,7 @@
                 </li>
                 {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="#" id="follow-nav">Following</a>
+                        <a class="nav-link" href="{% url 'following' %}" id="follow-nav">Following</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
