--- a/project4/network/templates/network/following.html
+++ b/project4/network/templates/network/following.html
@@ -5,8 +5,8 @@
     {% if nofollow %}
     <h1>Currently, you are not following anybody.</h1>
     {% else %}
-    {% for posts in page_obj %}
-    {% for post in posts %}
+    <h1>Posts from the people that you following</h1>
+    {% for post in page_obj %}
         <div class="post">
             <p>{{post.owner}}</p>
             <p>{{ post.content }}</p>
@@ -15,26 +15,25 @@
     {% empty %}
     <h5>User has no posts</h5>
     {% endfor %}
-    {% endfor %}
     {% endif %}
-    <footer>
-        <nav class="page-nav" aria-label="Page navigation">
-            <ul class="pagination justify-content-center">
-                {% if page_obj.has_previous %}
-                <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a></li>
-                {% else %}
-                <li class="page-item disabled"><a class="page-link" href="">Previous</a></li>
-                {% endif %}
-    
-                <li class="page-item active"><a class="page-link" href="?page={{ page_obj.number }}">{{ page_obj.number }}</a></li>
-    
-                {% if page_obj.has_next %}
-                <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a></li>
-                {% else %}
-                <li class="page-item disabled"><a class="page-link" href="">Next</a></li>
-                {% endif %}
-            </ul>
-        </nav>
-    </footer>
 </main>
+<footer>
+    <nav class="page-nav" aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
+            {% if page_obj.has_previous %}
+            <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a></li>
+            {% else %}
+            <li class="page-item disabled"><a class="page-link" href="">Previous</a></li>
+            {% endif %}
+
+            <li class="page-item active"><a class="page-link" href="?page={{ page_obj.number }}">{{ page_obj.number }}</a></li>
+
+            {% if page_obj.has_next %}
+            <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a></li>
+            {% else %}
+            <li class="page-item disabled"><a class="page-link" href="">Next</a></li>
+            {% endif %}
+        </ul>
+    </nav>
+</footer>
 {% endblock %}
