--- a/project4/network/templates/network/index.html
+++ b/project4/network/templates/network/index.html
@@ -17,6 +17,8 @@
         <div class="post">
         <p>{{ item.content }}</p>
         <p>{{ item.owner.username }}</p>
+        <p><button data-id={{item.id}} class="like-btn">&#x2764;</button><span class="like-num">{{item.like}}</span></p>
+        
         <p>{{ item.time }}</p>
         </div>
         {% endfor %}
