--- a/project4/network/templates/network/profile.html
+++ b/project4/network/templates/network/profile.html
@@ -2,26 +2,45 @@
 
 {% block body %}
 <main>
+    <div class="profile">
     <h2 id="profile-name">{{username}}'s Profile</h2>
 
     {% if button %}
         {% if follow %}
-            <button data-id="{{username}}" id="follow-button">Unfollow</button>
+            <button data-id="{{username}}" class="unfollow-btn" id="follow-button">Unfollow</button>
         {% else %}
-            <button data-id="{{username}}" id="follow-button">Follow</button>
+            <button data-id="{{username}}" class="follow-btn" id="follow-button">Follow</button>
         {% endif %}
     {% endif %}
-
-    <p>Followers</p>
-    <p>Following</p>
-    
+    </div>
+    <p class="follower">Followers {{follower}}</p>
+    <p class="following">Following {{following}}</p>
     <h3>Your Posts</h3>
-    {% for post in posts %}
+    {% for post in page_obj %}
     <div class="post">
         <p>{{ post.content }}</p>
         <p>{{ post.time }}</p>
     </div>
     {% endfor %}
 </main>
+<footer>
+    <nav class="page-nav" aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
+            {% if page_obj.has_previous %}
+            <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a></li>
+            {% else %}
+            <li class="page-item disabled"><a class="page-link" href="">Previous</a></li>
+            {% endif %}
+
+            <li class="page-item active"><a class="page-link" href="?page={{ page_obj.number }}">{{ page_obj.number }}</a></li>
+
+            {% if page_obj.has_next %}
+            <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a></li>
+            {% else %}
+            <li class="page-item disabled"><a class="page-link" href="">Next</a></li>
+            {% endif %}
+        </ul>
+    </nav>
+</footer>
 
 {% endblock %}
