--- a/project4/network/static/network/styles.css
+++ b/project4/network/static/network/styles.css
@@ -29,6 +29,9 @@ footer {
     margin-top: 1em;
 }
 
+p {
+    margin: 0.5em 0.5em;
+}
 .follower, .following {
     display:inline;
     padding: 0.5em;
@@ -74,11 +77,19 @@ footer {
     transform: translateY(200%);
 }
 
+.username {
+    font-weight: 500;
+    margin-bottom: 0;
+}
+
+.time {
+    color: rgb(88, 88, 88);
+}
 .post {
     border: 1px solid gray;
     border-radius: 15px;    
     margin-top: clamp(1em, 2.5vh, 1.5em);
-    padding: 1em 2.5%
+    padding: 0.5em 2.5%
 }
 
 
@@ -103,4 +114,8 @@ button:hover {
 .like-btn {
     background-color: white;
     border: none;
+}
+
+.edit-btn {
+    padding: 0 0.5em;
 }
