--- a/project4/network/templates/network/index.html
+++ b/project4/network/templates/network/index.html
@@ -8,7 +8,7 @@
             <form action="" method="post">
                 {% csrf_token %}
                 <label for="content">New Post</label>
-                <textarea class="form-control" id="content" rows="3" placeholder="Max 256 characters" name="content"></textarea>
+                <textarea class="form-control" id="content" rows="3" placeholder="Max 256 characters" name="content" maxlength="256"></textarea>
                 <input class="btn btn-primary sub-button" type="submit"  value="Post">
             </form>
         </div>
