--- a/project4/network/templates/network/profile.html
+++ b/project4/network/templates/network/profile.html
@@ -16,12 +16,27 @@
     <p class="follower">Followers {{follower}}</p>
     <p class="following">Following {{following}}</p>
     <h3>Your Posts</h3>
-    {% for post in page_obj %}
+    {% for item in page_obj %}
+    <div class="post" data-id={{item.id}}> 
+    <p class="username">{{ item.owner.username }}</p>
+    {% if item.owner.username == request.user.username %}
+    <button class="btn btn-link edit-btn" id="edit-btn">Edit</button>
+    {% endif %}
+    <p id="content">{{ item.content }}</p>
+    {% if request.user.is_authenticated %}
+    <p><button data-id={{item.id}} class="like-btn" id="like-btn">&#x2764;</button><span class="like-num">{{item.like}}</span></p>
+    {% else %}
+    <p>&#x2764;<span class="like-num">{{item.like}}</span></p>
+    {% endif %}
+    <p class="time">{{ item.time }}</p>
+    </div>
+    {% endfor %}
+    <!-- {% for post in page_obj %}
     <div class="post">
         <p>{{ post.content }}</p>
         <p>{{ post.time }}</p>
     </div>
-    {% endfor %}
+    {% endfor %} -->
 </main>
 <footer>
     <nav class="page-nav" aria-label="Page navigation">
