--- a/project2/mail/mail/templates/mail/inbox.html
+++ b/project2/mail/mail/templates/mail/inbox.html
@@ -38,7 +38,7 @@
             <p class="bold">Subject: <span id="subject"></span></p>
             <p class="bold">Timestamp: <span id="time"></span> </p>
             <button id="reply">Reply</button>
-            <button id="archieve" data-id="">Archieve</button>
+            <button id="archieve" data-id=""></button>
         </div>
         <div class="mail-body">
             <p class="mail-body__p"></p>
