--- a/project1/commerce/auctions/templates/auctions/listing.html
+++ b/project1/commerce/auctions/templates/auctions/listing.html
@@ -49,7 +49,8 @@
             {% if item.description %}
                 <h3>Description: {{item.description}}</h2>
             {% endif %}
-            <h3>Price: {{item.price}} </h2>
+            <h3>Initial Price: {{item.initial_price}}</h3>
+            <h3>Current Price: {{item.price}} </h2>
             <h3>Createad at: {{item.created_time}}</h2>
             </div>
         </div>
