--- a/project1/commerce/auctions/templates/auctions/index.html
+++ b/project1/commerce/auctions/templates/auctions/index.html
@@ -10,7 +10,7 @@
 {% if items %}
     {% for item in items %}
     <div class="container-fluid border-bottom">
-        <div class="row">
+        <div class="row p-2">
             <div class="col-4 align-self-center">
             <img src="{{item.image}}    " class="img-fluid" alt="W3Schools.com" onerror="this.onerror=null;this.src='{{img_url}}';" style="width:240px;height:auto;">
             </div>
