--- a/project4/network/static/network/styles.css
+++ b/project4/network/static/network/styles.css
@@ -32,6 +32,18 @@ footer {
 p {
     margin: 0.5em 0.5em;
 }
+
+p a:any-link {
+    text-decoration: none;
+    font-weight: bolder;
+    color: black;
+    transition: all ease 0.2s;
+} 
+
+p a:hover {
+    box-shadow: 0 0 11px rgba(33,33,33,.2);
+}
+
 .follower, .following {
     display:inline;
     padding: 0.5em;
@@ -96,7 +108,7 @@ p {
     border: 1px solid gray;
     border-radius: 15px;    
     margin-top: clamp(1em, 2.5vh, 1.5em);
-    padding: 0.5em 2.5%
+    padding: 0.5em 2.5%;
 }
 
 button:hover {
@@ -120,3 +132,4 @@ button:hover {
 .submit-btn, .cancel-btn {
     margin: 0.5em;
 }
+
