--- a/project_wiki/wiki/encyclopedia/templates/encyclopedia/entry_page.html
+++ b/project_wiki/wiki/encyclopedia/templates/encyclopedia/entry_page.html
@@ -5,5 +5,6 @@
 {% endblock %}
 
 {% block body %}
+<a class="btn btn-primary" href="{% url 'edit_page' title %}" role="button">Edit Post</a>
 <div>{{entry|safe}}</div>   
 {% endblock %}
