--- a/project_wiki/wiki/encyclopedia/templates/encyclopedia/index.html
+++ b/project_wiki/wiki/encyclopedia/templates/encyclopedia/index.html
@@ -7,18 +7,17 @@
 {% block body %}
     {% if search %}
         <h1>Based on your search</h1>
-        {% for entry in entries %}
-        <div class="allPages">
+        <div class="list-group w-50">
             {% for entry in entries %}
-                <p><a href="{% url 'entry_page' entry %}">{{ entry }}</a></p>
+                <a class="list-group-item list-group-item-action" href="{% url 'entry_page' entry %}">{{ entry }}</a>
             {% endfor %}
         </div>
-        {% endfor %}
+
     {% else %}
         <h1>All Pages</h1>
-        <div class="allPages">
+        <div class="list-group w-50">
             {% for entry in entries %}
-                <p><a href="{% url 'entry_page' entry %}">{{ entry }}</a></p>
+                <a class="list-group-item list-group-item-action" href="{% url 'entry_page' entry %}">{{ entry }}</a>
             {% endfor %}
         </div>
     {% endif %}
